...
            Toast.makeText(context, e.message.toString(), Toast.LENGTH_LONG).show()
        }
    }

    Scaffold(
        scaffoldState = rememberScaffoldState(snackbarHostState = snackbarHostState),
        modifier = Modifier.testTag("LOGIN_SCREEN")
    ) {
        Column(
            modifier = Modifier
                .fillMaxSize()
                .padding(24.dp),
            verticalArrangement = Arrangement.Top,
...
                painterResource(id = R.drawable.ic_logo),
                contentDescription = stringResource(id = R.string.app_icon_button_description),
                modifier = Modifier
                    .size(160.dp)
                    .padding(24.dp)
                    .align(Alignment.CenterHorizontally)
                    .testTag("APP_ICON")
            )

            OutlinedTextField(
                modifier = Modifier
                    .fillMaxWidth()
                    .onFocusEvent {
                        if (it.isFocused) {
                            coroutineScope.launch {
                                bringIntoViewRequester.bringIntoView()
                            }
                        }
                    }
                    .testTag("LOGIN_EMAIL_FIELD"),
                shape = RoundedCornerShape(55),
                value = userEmail,
                label = {
                    Text(
                        text = stringResource(id = R.string.email_field_label)
                    )
...
                        if (it.isFocused) {
                            coroutineScope.launch {
                                bringIntoViewRequester.bringIntoView()
                            }
                        }
                    }
                    .testTag("LOGIN_PASSWORD_FIELD"),
                isError = isPasswordFieldEmpty,
                shape = RoundedCornerShape(55),
                value = userPassword,
                label = {
                    Text(
                        text = stringResource(id = R.string.password_field_label),
...
                    PasswordVisualTransformation()
                },
                trailingIcon = {
                    if (showPassword) {
                        IconButton(
                            onClick = { showPassword = false },
                            modifier = Modifier.testTag("LOGIN_PASSWORD_VISIBILITY_OFF_ICON"),
                        ) {
                            Icon(
                                painterResource(id = R.drawable.ic_visibility),
                                contentDescription = stringResource(id = R.string.visibility_icon),
                                tint = MaterialTheme.colors.primaryVariant,
                            )
                        }
                    } else {
                        IconButton(
                            onClick = { showPassword = true },
                            modifier = Modifier.testTag("LOGIN_PASSWORD_VISIBILITY_ON_ICON")
                        ) {
                            Icon(
                                painterResource(id = R.drawable.ic_visibility_off),
                                contentDescription = stringResource(id = R.string.visibility_off_icon),
                                tint = MaterialTheme.colors.primaryVariant,
                            )
...
            Spacer(modifier = Modifier.height(36.dp))

            Button(
                modifier = Modifier
                    .fillMaxWidth()
                    .height(40.dp)
                    .testTag("LOGIN_BUTTON"),
                enabled = userEmail.isNotEmpty() && userPassword.isNotEmpty(),
                content = {
                    Text(
                        text = stringResource(id = R.string.login_button_text)
                    )
                },
...
            Text(
                modifier = Modifier
                    .fillMaxWidth()
                    .clickable {
                        showDialog = !showDialog
                    }
                    .testTag("LOGIN_FORGOT_PASSWORD_BUTTON"),
                color = MaterialTheme.colors.secondary,
                textAlign = TextAlign.Center,
                style = MaterialTheme.typography.caption,
                text = stringResource(id = R.string.forgotten_password_button_text)
            )

            Spacer(modifier = Modifier.height(40.dp))

            Text(
                modifier = Modifier
                    .fillMaxWidth()
                    .testTag("LOGIN_WITH_LABEL"),
                textAlign = TextAlign.Center,
                style = MaterialTheme.typography.caption,
                text = stringResource(id = R.string.login_options)
            )
            Spacer(modifier = Modifier.height(8.dp))


            IconButton(
                modifier = Modifier
                    .height(50.dp)
                    .align(Alignment.CenterHorizontally)
                    .testTag("GOOGLE_ICON_BUTTON"),
                onClick = {
                    val gso = GoogleSignInOptions.Builder(GoogleSignInOptions.DEFAULT_SIGN_IN)
                        .requestIdToken(token)
                        .requestEmail()
                        .build()

...
            Spacer(modifier = Modifier.height(36.dp))

            Text(
                modifier = Modifier
                    .fillMaxWidth()
                    .bringIntoViewRequester(bringIntoViewRequester)
                    .testTag("WITHOUT_ACCOUNT_SIGN_UP_LABEL"),
                textAlign = TextAlign.Center,
                style = MaterialTheme.typography.caption,
                text = stringResource(id = R.string.without_account)
            )

            Spacer(modifier = Modifier.height(16.dp))

            Button(
                modifier = Modifier
                    .fillMaxWidth()
                    .height(40.dp)
                    .testTag("REGISTRATION_BUTTON"),
                content = {
                    Text(
                        text = stringResource(id = R.string.registration_button_text)
                    )
                },
                onClick = {
...
                        }
                    }
                    is Resource.Loading -> {
                        CircularProgressIndicator(
                            modifier = Modifier
                                .size(10.dp)
                                .testTag("LOGIN_PROGRESS_INDICATOR")

                        )
                    }
                    else -> loginWithCredentialsFlow.value?.let {
                        when (it) {
                            is Resource.Failure -> {
...
