<resources>
    <string name="app_name">MLKitApp</string>

    <string name="empty_email_field">The email field cannot be empty!</string>
    <string name="wrong_email_field">The email field must contains a @ character!</string>
    <string name="wrong_email_field_without_domain">The email field must end with a domain name!</string>
    <string name="empty_password_field">The password field cannot be empty!</string>
    <string name="short_password_field">The password must contain at least 8 characters!</string>
    <string name="not_equal_passwords">The two passwords must be equals!</string>
    <string name="email_field_label">Email</string>
    <string name="password_field_label">Password</string>
    <string name="password_confirm_field_label">Confirm password</string>

    <string name="login_button_text">LOGIN</string>
    <string name="forgotten_password_button_text">DID YOU FORGET YOUR PASSWORD?</string>
    <string name="login_options">LOGIN WITH</string>
    <string name="without_account">If you do not have an account, sign up!</string>
    <string name="registration_button_text">REGISTRATION</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="send_button_text">SEND</string>

    <string name="client_secret">350873722416-nkkpua2ka87gkcb1bk5f265ueas4c9vf.apps.googleusercontent.com</string>
    <string name="fb_app_id">843607933654556</string>
    <string name="fb_login_protocol_scheme">fb843607933654556</string>
    <string name="fb_client_token">25550070099ece407dd922f979fcd7c5</string>

    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="saved">Saved</string>
    <string name="map">Map</string>
    <string name="gallery">Gallery</string>

    <string name="text_field">Text field</string>
    <string name="barcode">Barcode</string>

    <string name="menu">Menu</string>

    <string name="allow_button_text">Allow app to use location and camera</string>
    <string name="open_settings_button_text">Open permission settings</string>

    <string name="title_activity_firebase">FirebaseActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>

    <string name="take_image_description">Taken image</string>
    <string name="take_image_button_text">Take photo</string>
    <string name="take_new_image_button_text">Take new photo</string>
    <string name="save_button_text">Save</string>

    <string name="chosen_image_description">Chosen image</string>
    <string name="choose_image_button_text">Choose photo</string>
    <string name="choose_new_image_button_text">Choose new photo</string>

    <string name="save_to_cloud">Do you want to save this to the cloud?</string>
    <string name="private_save">Save for myself</string>
    <string name="public_save">Save to the cloud</string>

    <string name="account">Account</string>
    <string name="account_sub_title">Manage your account</string>
    <string name="saved_sub_title">Your saved recognized texts</string>
    <string name="settings">Settings</string>
    <string name="settings_sub_title">Various app settings options</string>
    <string name="logout">Logout</string>
    <string name="logout_sub_title">Logout from your account</string>
    <string name="title_activity_map">MapActivity</string>

    <string name="email_and_password">email address and password</string>
    <string name="google_account">Google account</string>
    <string name="signed_in_via">You are signed in with your </string>
    <string name="cant_change_password">Note: You cannot change your password, because you are signed in via socials! </string>
    <string name="change_password">Change password</string>

    <string name="no_items_saved">You does not have any saved items yet!</string>

    <string name="location_label">Location</string>
    <string name="text_label">Text</string>
    <string name="image_label">Image</string>
    <string name="private_label">Private</string>
    <string name="open_in_map_button_text">Open in map</string>

    <string name="app_info_label">App information</string>
    <string name="app_info_subtitle_label">General application information</string>
    <string name="accessibility_label">Accessibility settings</string>
    <string name="accessibility_subtitle_label">Control your applications accessibility</string>
    <string name="location_settings_label">Location settings</string>
    <string name="location_settings_subtitle_label">Control your applications location settings</string>
    <string name="talk_back_label">Talkback settings</string>
    <string name="talk_back_subtitle_label">Control your applications talkback audio settings</string>

    <string name="empty"> </string>

    <string name="visibility_icon">Visibility icon</string>
    <string name="visibility_off_icon">Visibility off icon</string>
    <string name="google_icon">Google icon</string>
    <string name="app_icon_button_description">Eye icon</string>
    <string name="profile_icon_description">Profile icon</string>
    <string name="arrow_back_icon_description">Arrow back icon</string>
    <string name="arrow_forward_icon_description">Arrow forward icon</string>
    <string name="menu_icon_description">Menu icon</string>
    <string name="delete_icon_description">Delete icon</string>
    <string name="info_icon_description">Info icon</string>
    <string name="accessibility_icon_description">Accessibility icon</string>
    <string name="talk_back_icon_description">Talkback icon</string>
    <string name="location_icon_description">Location icon</string>

</resources>