...
        Card(
            shape = RoundedCornerShape(24.dp),
            modifier = Modifier
                .fillMaxWidth()
                .wrapContentSize()
                .padding(4.dp)
                .testTag("PASSWORD_CHANGE_DIALOG_TAG"),
            ) {
            Column(
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(32.dp)
                    .background(Color.White),
...
