...
                stringResource(id = NavDrawerItems.Barcode.title)
            }
        }
    }

    Scaffold(
        modifier = Modifier.testTag("MAIN_SCREEN"),
        scaffoldState = scaffoldState,
        drawerContent = {
            NavigationDrawer(
                scope = scope,
                scaffoldState = scaffoldState,
                navController = navController
...
